# Spotify-Link-To-Musixmatch-Track-and-Album-webApp

./: .cache  .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  TRANSLATION_GUIDE.md  add_language.py  app.py  apple.py  compile_translations.py  contributors.json  crowdin.yml  docker-compose.yml  extract_messages.py  fetch_contributors.py  init_translations.py  messages.pot  mxm.py  mxm_old.py  pyproject.toml  repro_apple.py  requirements-dev.txt  requirements.in  requirements.txt  response_history.json  spotify.py  test_integration.py  update_translations.py
.github/: dependabot.yml
.github/workflows/: build.yaml  compile_translations.yml  crowdin-download.yml  crowdin-sync.yml  crowdin-upload.yml  crowdin.yml  fetch-contributors.yml  lint.yml
.trae/documents/: Implementasi Linter dan Formatter Otomatis.md
Asyncmxm/: __init__.py  client.py  exceptions.py
scripts/: flush_redis.py  repro_apple.py
scripts/translations/: add_language.py  compile_translations.py  extract_messages.py  init_translations.py  update_translations.py
src/: apple_music_scraper.py  example.py  utils.py
static/: BingSiteAuth.xml  script.js  styles.css
templates/: abstrack.html  api.html  apple.html  base.html  credits.html  history.html  index.html  isrc.html  mxm.html  split.html
templates/layout/: published_map.html
tests/: test_apple.py  test_integration.py  test_spotify.py
translations/: messages.pot
translations/en/LC_MESSAGES/: messages.mo  messages.po
translations/id/LC_MESSAGES/: messages.mo  messages.po
translations/ms/LC_MESSAGES/: messages.mo  messages.po
translations/su/LC_MESSAGES/: messages.mo  messages.po
